# audioling

./: .commitlintrc.json  .env  .eslintignore  .gitattributes  .npmrc  .prettierrc  LICENSE  README.md  bun.lockb  deploy-server-macos.ts  deploy-server.ts  deploy.ts  env.d.ts  eslint.config.mjs  init.ts  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/ISSUE_TEMPLATE/: 01-feature_request.yml  02-bug_report.yml  config.yml
.github/workflows/: build.yml  publish.yml
apps/electron/: .electron-vendors.cache.json  .env.development  .env.production  package.json  tsconfig.json  vite.config.ts  webpack.config.js
apps/electron/build-resources/: entitlements.mac.plist
apps/electron/scripts/: build.ts  notarize-mac.ts
apps/electron/src/: index.ts  ipc.ts  main-window.ts
apps/electron/types/: env.d.ts
apps/preload/: package.json  tsconfig.json  vite.config.ts
apps/preload/src/: index.ts  ipc-main.ts  ipc-renderer.ts
apps/server/: .eslintignore  .gitignore  package.json  tsconfig.json
apps/server/src/: application.ts  constants.ts  (+2 more)
apps/web/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .stylelintrc  .stylelintrc.json  index.html  orval-lint.ps1  orval.config.cjs  package.json  postcss.config.cjs  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icon/: icon.icns
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
scripts/: update-electron-vendors.js  watch.ts
(+883 files in other folders)
